--- a/web_application/parlock/templates/base.html
+++ b/web_application/parlock/templates/base.html
@@ -6,17 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Central Home{% endblock %}</title>
-    <link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
     {% load static %}
     <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" crossorigin="anonymous">
-
+    <link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
     <style>
         body {
             background-color: #DFDBE5;
             background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.27' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
         }
     </style>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
 
@@ -49,10 +50,11 @@
             {% else %}
             <a href="{% url 'login' %}" class="block py-1 text-gray-600 hover:underline">Login</a>
             {% endif %}
+            
         </nav>
 
     </header>
-    <main class="flex-grow mx-auto my-8">
+    <main class="flex-grow px-auto w-full my-8">
         {% block content %}
         {% endblock %}
     </main>
@@ -62,8 +64,12 @@
     <footer class="flex flex-col items-center justify-between px-6 py-2 bg-white dark:bg-gray-800 sm:flex-row">
         <a href="/"
             class="text-xl font-bold text-gray-800 dark:text-white hover:text-gray-700 dark:hover:text-gray-300">Parlock</a>
-
-        <p class="py-2 text-gray-800 dark:text-white sm:py-0">All rights reserved</p>
+{% if user.is_admin %}
+<a href="/admin" class="py-2 text-gray-800 dark:text-white sm:py-0">Secret Admin Page</a>
+{% else %}
+<p class="py-2 text-gray-800 dark:text-white sm:py-0">All rights reserved</p>
+{% endif %}
+        
 
         <div class="flex -mx-2">
             <a href="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300"
