switched to pure bs, no tailwind

--- a/web_application/parlock/templates/base.html
+++ b/web_application/parlock/templates/base.html
@@ -1,105 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Central Home{% endblock %}</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" crossorigin="anonymous">
-    <link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #DFDBE5;
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.27' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-        }
-    </style>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <title>
+        {% block title %}
+
+        {% endblock title %}
+    </title>
+
+    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'custom.css' %}">
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.js"
+        integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+        integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+        crossorigin="anonymous"></script>
 
 </head>
 
-<body class="flex flex-col h-full">
+<body>
 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'home' %}">Parlock</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+                aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-    <header x-data="{ mobileMenuOpen : false }"
-        class="flex flex-wrap flex-row justify-between md:items-center md:space-x-4 bg-white py-6 px-6 relative">
-        <a href="/" class="block">
-            <span class="sr-only">Parlock</span>
-            <svg class="h-8 md:h-8 w-8 md:w-8" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"><g id="Page-1" fill="none" fill-rule="evenodd" alt="Parlock Logo" title="Parlock"><g id="003---Safe" fill="rgb(0,0,0)" fill-rule="nonzero"><path id="Shape" d="m4.167 53.9v2.1c0 2.209139 1.790861 4 4 4h9.833c2.209139 0 4-1.790861 4-4v-2h10v2c0 2.209139 1.790861 4 4 4h9.833c2.209139 0 4-1.790861 4-4v-2.084c2.4006229-.4056024 4.1601215-2.4813632 4.167-4.916v-44c-.0033061-2.76005315-2.2399468-4.99669388-5-5h-43.83c-2.76005315.00330612-4.99669388 2.23994685-5 5v4c0 .55228475.44771525 1 1 1s1-.44771525 1-1v-4c0-1.65685425 1.34314575-3 3-3h43.83c1.6568542 0 3 1.34314575 3 3v44c0 1.6568542-1.3431458 3-3 3h-43.83c-1.65685425 0-3-1.3431458-3-3v-35c0-.5522847-.44771525-1-1-1s-1 .4477153-1 1v35c.00270418 2.3741829 1.67177561 4.42033 3.997 4.9zm43.666.1v2c0 1.1045695-.8954305 2-2 2h-9.833c-1.1045695 0-2-.8954305-2-2v-2zm-27.833 0v2c0 1.1045695-.8954305 2-2 2h-9.833c-1.1045695 0-2-.8954305-2-2v-2z"/><path id="Shape" d="m8 34c-.55228475 0-1 .4477153-1 1v9c0 1.6568542 1.34314575 3 3 3h34c1.6568542 0 3-1.3431458 3-3v-1c1.6568542 0 3-1.3431458 3-3v-6c0-1.6568542-1.3431458-3-3-3v-8c1.6568542 0 3-1.3431458 3-3v-6c0-1.6568542-1.3431458-3-3-3v-1c0-1.65685425-1.3431458-3-3-3h-34c-1.65685425 0-3 1.34314575-3 3v20c0 .5522847.44771525 1 1 1s1-.4477153 1-1v-20c0-.55228475.44771525-1 1-1h34c.5522847 0 1 .44771525 1 1v1c-1.6568542 0-3 1.3431458-3 3v6c0 1.6568542 1.3431458 3 3 3v8c-1.6568542 0-3 1.3431458-3 3v6c0 1.6568542 1.3431458 3 3 3v1c0 .5522847-.4477153 1-1 1h-34c-.55228475 0-1-.4477153-1-1v-9c0-.5522847-.44771525-1-1-1zm36-14v-6c0-.5522847.4477153-1 1-1h2c.5522847 0 1 .4477153 1 1v6c0 .5522847-.4477153 1-1 1h-2c-.5522847 0-1-.4477153-1-1zm0 20v-6c0-.5522847.4477153-1 1-1h2c.5522847 0 1 .4477153 1 1v6c0 .5522847-.4477153 1-1 1h-2c-.5522847 0-1-.4477153-1-1z"/><path id="Shape" d="m15.914 31.592c2.1907408 5.2891877 7.8126752 8.2942726 13.4276148 7.1774446s9.6590229-6.0445121 9.6590229-11.7694446-4.0440833-10.6526166-9.6590229-11.7694446-11.236874 1.8882569-13.4276148 7.1774446c-1.2275633 2.9382732-1.2275633 6.2457268 0 9.184zm6.354-13.4.364.878c.1316192.3376241.43559.5776264.7945371.6273323.358947.0497059.7166983-.0986631.9351117-.3878157.2184134-.2891527.2633091-.6738391.1173512-1.0055166l-.363-.878c1.8801281-.5719701 3.8878719-.5719701 5.768 0l-.363.878c-.1459579.3316775-.1010622.7163639.1173512 1.0055166.2184134.2891526.5761647.4375216.9351117.3878157.3589471-.0497059.6629179-.2897082.7945371-.6273323l.364-.879c1.7335895.925406 3.1530191 2.3451837 4.078 4.079l-.878.364c-.3376241.1316192-.5776264.43559-.6273323.7945371-.0497059.358947.0986631.7166983.3878157.9351117.2891527.2184134.6738391.2633091 1.0055166.1173512l.878-.363c.5719701 1.8801281.5719701 3.8878719 0 5.768l-.878-.363c-.3316775-.1459579-.7163639-.1010622-1.0055166.1173512-.2891526.2184134-.4375216.5761647-.3878157.9351117.0497059.3589471.2897082.6629179.6273323.7945371l.879.364c-.925406 1.7335895-2.3451837 3.1530191-4.079 4.078l-.364-.878c-.1316192-.3376241-.43559-.5776264-.7945371-.6273323-.358947-.0497059-.7166983.0986631-.9351117.3878157-.2184134.2891527-.2633091.6738391-.1173512 1.0055166l.363.878c-1.8801281.5719701-3.8878719.5719701-5.768 0l.363-.878c.1459579-.3316775.1010622-.7163639-.1173512-1.0055166-.2184134-.2891526-.5761647-.4375216-.9351117-.3878157-.3589471.0497059-.6629179.2897082-.7945371.6273323l-.364.879c-1.7335895-.925406-3.1530191-2.3451837-4.078-4.079l.878-.364c.3376241-.1316192.5776264-.43559.6273323-.7945371.0497059-.358947-.0986631-.7166983-.3878157-.9351117-.2891527-.2184134-.6738391-.2633091-1.0055166-.1173512l-.878.363c-.5719701-1.8801281-.5719701-3.8878719 0-5.768l.878.363c.3316775.1459579.7163639.1010622 1.0055166-.1173512.2891526-.2184134.4375216-.5761647.3878157-.9351117-.0497059-.3589471-.2897082-.6629179-.6273323-.7945371l-.879-.364c.9250887-1.7343296 2.3448972-3.1544862 4.079-4.08z"/><path id="Shape" d="m27.008 33c2.6423663-.0041118 4.970995-1.7363776 5.7346387-4.2659952.7636437-2.5296175-.217483-5.261036-2.4161892-6.726576-2.1987062-1.4655401-5.0973479-1.320168-7.1383913.3580032s-2.7439633 4.4940476-1.7310582 6.934568c.9329374 2.2415019 3.1230994 3.7013469 5.551 3.7zm-1.539-9.7c2.041162-.8420637 4.378567.1290647 5.2220746 2.1696304.8435077 2.0405657-.1259667 4.3786572-2.1659351 5.2236084-2.0399684.8449511-4.3787452-.1228687-5.2251395-2.1622388-.4100034-.9809201-.4115723-2.0849066-.0043586-3.0669881s1.1895312-1.7610346 2.1733586-2.1640119z"/><path id="Shape" d="m17 11h-5c-.5522847 0-1 .4477153-1 1v5c0 .5522847.4477153 1 1 1s1-.4477153 1-1v-4h4c.5522847 0 1-.4477153 1-1s-.4477153-1-1-1z"/></g></g>Parlock
-            
-        </a>
-        <button @click="mobileMenuOpen = !mobileMenuOpen"
-            class="inline-block md:hidden w-8 h-8 bg-gray-200 text-gray-600 p-1">
-            <svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd"
-                    d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-                    clip-rule="evenodd"></path>
-            </svg>
-        </button>
-        <nav class="absolute md:relative top-16 left-0 md:top-0 z-20 md:flex flex-col md:flex-row md:space-x-6 font-semibold w-full md:w-auto bg-white shadow-md rounded-lg md:rounded-none md:shadow-none md:bg-transparent p-6 pt-0 md:p-0"
-            :class="{ 'flex' : mobileMenuOpen , 'hidden' : !mobileMenuOpen}" @click.away="mobileMenuOpen = false">
-            <a href="/" class="block py-1 text-indigo-600 hover:underline">Home</a>
-            {% if user.is_authenticated %}
-                <a href="{% url 'profile' %}" class="block py-1 text-gray-600 hover:underline">Profile: {{ user.username }}</a>
-                <a href="{% url 'parcel' %}" class="block py-1 text-gray-600 hover:underline">Parcels</a>
-                <a href="{% url 'locker' %}" class="block py-1 text-gray-600 hover:underline">Lockers</a>
-                <a href="{% url 'logout' %}" class="block py-1 text-red-600 hover:underline">Logout</a>
-            {% else %}
-            <a href="{% url 'login' %}" class="block py-1 text-gray-600 hover:underline">Login</a>
-            {% endif %}
-            
-        </nav>
+            <div class="collapse navbar-collapse" id="navbarColor01">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{% url 'home' %}">Home
+                            <span class="visually-hidden">(current)</span>
+                        </a>
+                    </li>
 
-    </header>
-    <main class="flex-grow px-auto w-full my-8">
-        {% block content %}
-        {% endblock %}
-    </main>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                            aria-haspopup="true" aria-expanded="false">Profile</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Profile:{{user.username}}</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item text-danger" href="{% url 'logout' %}">Logout</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                            aria-haspopup="true" aria-expanded="false">Parcels</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Register Parcel</a>
+                            <a class="dropdown-item" href="#">My Parcels</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                            aria-haspopup="true" aria-expanded="false">Lockers</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Apply Locker</a>
+                            <a class="dropdown-item" href="#">Report Locker</a>
+                        </div>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sign Up</a>
+                    </li>
 
-
-
-    <footer class="flex flex-col items-center justify-between px-6 py-2 bg-white dark:bg-gray-800 sm:flex-row">
-        <a href="/"
-            class="text-xl font-bold text-gray-800 dark:text-white hover:text-gray-700 dark:hover:text-gray-300">Parlock</a>
-{% if user.is_admin %}
-<a href="/admin" class="py-2 text-gray-800 dark:text-white sm:py-0">Secret Admin Page</a>
-{% else %}
-<p class="py-2 text-gray-800 dark:text-white sm:py-0">All rights reserved</p>
-{% endif %}
-        
-
-        <div class="flex -mx-2">
-            <a href="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300"
-                aria-label="Reddit">
-                <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C21.9939 17.5203 17.5203 21.9939 12 22ZM6.807 10.543C6.20862 10.5433 5.67102 10.9088 5.45054 11.465C5.23006 12.0213 5.37133 12.6558 5.807 13.066C5.92217 13.1751 6.05463 13.2643 6.199 13.33C6.18644 13.4761 6.18644 13.6229 6.199 13.769C6.199 16.009 8.814 17.831 12.028 17.831C15.242 17.831 17.858 16.009 17.858 13.769C17.8696 13.6229 17.8696 13.4761 17.858 13.33C18.4649 13.0351 18.786 12.3585 18.6305 11.7019C18.475 11.0453 17.8847 10.5844 17.21 10.593H17.157C16.7988 10.6062 16.458 10.7512 16.2 11C15.0625 10.2265 13.7252 9.79927 12.35 9.77L13 6.65L15.138 7.1C15.1931 7.60706 15.621 7.99141 16.131 7.992C16.1674 7.99196 16.2038 7.98995 16.24 7.986C16.7702 7.93278 17.1655 7.47314 17.1389 6.94094C17.1122 6.40873 16.6729 5.991 16.14 5.991C16.1022 5.99191 16.0645 5.99491 16.027 6C15.71 6.03367 15.4281 6.21641 15.268 6.492L12.82 6C12.7983 5.99535 12.7762 5.993 12.754 5.993C12.6094 5.99472 12.4851 6.09583 12.454 6.237L11.706 9.71C10.3138 9.7297 8.95795 10.157 7.806 10.939C7.53601 10.6839 7.17843 10.5422 6.807 10.543ZM12.18 16.524C12.124 16.524 12.067 16.524 12.011 16.524C11.955 16.524 11.898 16.524 11.842 16.524C11.0121 16.5208 10.2054 16.2497 9.542 15.751C9.49626 15.6958 9.47445 15.6246 9.4814 15.5533C9.48834 15.482 9.52348 15.4163 9.579 15.371C9.62737 15.3318 9.68771 15.3102 9.75 15.31C9.81233 15.31 9.87275 15.3315 9.921 15.371C10.4816 15.7818 11.159 16.0022 11.854 16C11.9027 16 11.9513 16 12 16C12.059 16 12.119 16 12.178 16C12.864 16.0011 13.5329 15.7863 14.09 15.386C14.1427 15.3322 14.2147 15.302 14.29 15.302C14.3653 15.302 14.4373 15.3322 14.49 15.386C14.5985 15.4981 14.5962 15.6767 14.485 15.786V15.746C13.8213 16.2481 13.0123 16.5208 12.18 16.523V16.524ZM14.307 14.08H14.291L14.299 14.041C13.8591 14.011 13.4994 13.6789 13.4343 13.2429C13.3691 12.8068 13.6162 12.3842 14.028 12.2269C14.4399 12.0697 14.9058 12.2202 15.1478 12.5887C15.3899 12.9572 15.3429 13.4445 15.035 13.76C14.856 13.9554 14.6059 14.0707 14.341 14.08H14.306H14.307ZM9.67 14C9.11772 14 8.67 13.5523 8.67 13C8.67 12.4477 9.11772 12 9.67 12C10.2223 12 10.67 12.4477 10.67 13C10.67 13.5523 10.2223 14 9.67 14Z">
-                    </path>
-                </svg>
-            </a>
-
-            <a href="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300"
-                aria-label="Facebook">
-                <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M2.00195 12.002C2.00312 16.9214 5.58036 21.1101 10.439 21.881V14.892H7.90195V12.002H10.442V9.80204C10.3284 8.75958 10.6845 7.72064 11.4136 6.96698C12.1427 6.21332 13.1693 5.82306 14.215 5.90204C14.9655 5.91417 15.7141 5.98101 16.455 6.10205V8.56104H15.191C14.7558 8.50405 14.3183 8.64777 14.0017 8.95171C13.6851 9.25566 13.5237 9.68693 13.563 10.124V12.002H16.334L15.891 14.893H13.563V21.881C18.8174 21.0506 22.502 16.2518 21.9475 10.9611C21.3929 5.67041 16.7932 1.73997 11.4808 2.01722C6.16831 2.29447 2.0028 6.68235 2.00195 12.002Z">
-                    </path>
-                </svg>
-            </a>
-
-            <a href="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300"
-                aria-label="Github">
-                <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M12.026 2C7.13295 1.99937 2.96183 5.54799 2.17842 10.3779C1.395 15.2079 4.23061 19.893 8.87302 21.439C9.37302 21.529 9.55202 21.222 9.55202 20.958C9.55202 20.721 9.54402 20.093 9.54102 19.258C6.76602 19.858 6.18002 17.92 6.18002 17.92C5.99733 17.317 5.60459 16.7993 5.07302 16.461C4.17302 15.842 5.14202 15.856 5.14202 15.856C5.78269 15.9438 6.34657 16.3235 6.66902 16.884C6.94195 17.3803 7.40177 17.747 7.94632 17.9026C8.49087 18.0583 9.07503 17.99 9.56902 17.713C9.61544 17.207 9.84055 16.7341 10.204 16.379C7.99002 16.128 5.66202 15.272 5.66202 11.449C5.64973 10.4602 6.01691 9.5043 6.68802 8.778C6.38437 7.91731 6.42013 6.97325 6.78802 6.138C6.78802 6.138 7.62502 5.869 9.53002 7.159C11.1639 6.71101 12.8882 6.71101 14.522 7.159C16.428 5.868 17.264 6.138 17.264 6.138C17.6336 6.97286 17.6694 7.91757 17.364 8.778C18.0376 9.50423 18.4045 10.4626 18.388 11.453C18.388 15.286 16.058 16.128 13.836 16.375C14.3153 16.8651 14.5612 17.5373 14.511 18.221C14.511 19.555 14.499 20.631 14.499 20.958C14.499 21.225 14.677 21.535 15.186 21.437C19.8265 19.8884 22.6591 15.203 21.874 10.3743C21.089 5.54565 16.9181 1.99888 12.026 2Z">
-                    </path>
-                </svg>
-            </a>
+                    {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                            aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Separated link</a>
+                        </div>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <input class="form-control me-sm-2" type="text" placeholder="Search">
+                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                </form> -->
+            </div>
         </div>
-    </footer>
+    </nav>
+
+
+
+
+    <div class="container" style="margin-top: 120px;">
+        {% block content %}
+        {% endblock content %}
+    </div>
+
+
 </body>
 
 </html>
