--- a/web_application/parlock/templates/base.html
+++ b/web_application/parlock/templates/base.html
@@ -54,8 +54,8 @@
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Parcels</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Register Parcel</a>
-                            <a class="dropdown-item" href="#">My Parcels</a>
+                            <a class="dropdown-item" href="{% url 'parcel-register' %}">Register Parcel</a>
+                            <a class="dropdown-item" href="{% url 'parcel' %}">My Parcels</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -110,7 +110,7 @@
 
 
 
-    <div class="container" style="margin-top: 120px;">
+    <div class="container" style="margin-top: 60px;">
         {% block content %}
         {% endblock content %}
     </div>
